' Generated by UML Generator
' Encoded: lLN1Rjim3BtdAtHqbhZehW5MD6ilEHGjaDw67HY9yOJ9aY79mz2k-wTzmtvib1tROkhks4iGFV9Hv2CfNuS8FhQrMOJlsZRWeHRIG0ZR6Bq-j15tqjczVa9nkVYc5GgflJIuM7HUObkrSASjUZ3YUI54wRokq6x4dkYsIaX9FwlChw0eDkgZbg2S7ppNGc6GNZTIEpk14Mhu-yTjnD4uY6iXWQWAr4PeIyV68_blX7BjmU1QrE0bJ6oUp38bKc6yxz1YcIMvYgx_dw4lOurDipKrIBHTYQjdqYng-KAtQLk0hyB0-VALw3-SLjmDRVlG9HgAPYEstcDbt8DtgfNHhKMGnAV2I9qvUaEEDnuXOi4zXmXPfZnqtv7cT0ePW-1HMHAoExi6kuFu9CgFK-Duo2Ad3O8-zbZIhW-sac1aN_AZYzJovT2Y6UDTwbd1EiVSQnUY1x-pH-UBJ21GAiavP4QMWtC6mIQZGeCasEus2_bvCXk3jiite-1F7I9D9huHbLI6Gqf5ndv51DTvTgoJOMQmMGEwqIRaDnlk1F3nJWYJQMpIs9ttMgsXyxlyFhvHuTmwcrlMJmftE-NvAbXkcwc71yecSb0tnHXWNZgdtfnaoAOvP2XJYJFxcUQp7aQOwycP_GgSLpo_60FjVo_MtYauBR_pSllKIl1PLkb9g5slthGK_IWbwZk-qA_pIvGnkzFkBTykEFy0bUMlg-cDovxjYukhyxVnt3pXPs_eXxASZ9sm_9fhj8g-d_y0
' URL: http://www.plantuml.com/plantuml/uml/lLN1Rjim3BtdAtHqbhZehW5MD6ilEHGjaDw67HY9yOJ9aY79mz2k-wTzmtvib1tROkhks4iGFV9Hv2CfNuS8FhQrMOJlsZRWeHRIG0ZR6Bq-j15tqjczVa9nkVYc5GgflJIuM7HUObkrSASjUZ3YUI54wRokq6x4dkYsIaX9FwlChw0eDkgZbg2S7ppNGc6GNZTIEpk14Mhu-yTjnD4uY6iXWQWAr4PeIyV68_blX7BjmU1QrE0bJ6oUp38bKc6yxz1YcIMvYgx_dw4lOurDipKrIBHTYQjdqYng-KAtQLk0hyB0-VALw3-SLjmDRVlG9HgAPYEstcDbt8DtgfNHhKMGnAV2I9qvUaEEDnuXOi4zXmXPfZnqtv7cT0ePW-1HMHAoExi6kuFu9CgFK-Duo2Ad3O8-zbZIhW-sac1aN_AZYzJovT2Y6UDTwbd1EiVSQnUY1x-pH-UBJ21GAiavP4QMWtC6mIQZGeCasEus2_bvCXk3jiite-1F7I9D9huHbLI6Gqf5ndv51DTvTgoJOMQmMGEwqIRaDnlk1F3nJWYJQMpIs9ttMgsXyxlyFhvHuTmwcrlMJmftE-NvAbXkcwc71yecSb0tnHXWNZgdtfnaoAOvP2XJYJFxcUQp7aQOwycP_GgSLpo_60FjVo_MtYauBR_pSllKIl1PLkb9g5slthGK_IWbwZk-qA_pIvGnkzFkBTykEFy0bUMlg-cDovxjYukhyxVnt3pXPs_eXxASZ9sm_9fhj8g-d_y0
' Generated on: 2026-03-23T20:26:14.936279

@startuml
skinparam classAttributeIconSize 0
hide circle

class AguaMineral {
  -origen: String
  --
  +AguaMineral(identificador: String, descripcion: String, tamaño: float, cantidad: int, precio: double, marca: String, origen: String)
  +getOrigen(): String
  +toString(): String
}

class AppAlmacen {
  +{static} main(args: String[]): void
  +{static} menuPrecios(p: ArregloProducto, sc: Scanner): void
  +{static} prodCreate(sc: Scanner): Producto
}

class ArregloProducto {
  -productos: Producto
  -tamaño: int
  -tope: int = -1
  --
  +ArregloProducto(tamaño: int)
  +getTamaño(): int
  +calcPrecioTotal(): double
  +calcPrecioTotalMarca(marca: String): double
  +mostrarInfor(): void
  +add(p: Producto): boolean
  +delete(ID: String): Boolean
  +lleno(): boolean
  +existente(p: Producto): boolean
}

abstract class Producto {
  -identificador: String
  -descripcion: String
  -tamaño: float
  ~cantidad: int
  ~precio: double
  ~marca: String
  --
  +Producto(identificador: String, descripcion: String, tamaño: float, cantidad: int, precio: double, marca: String)
  +getIdentificador(): String
  +setIdentificador(identificador: String): void
  +getDescripcion(): String
  +setDescripcion(descripcion: String): void
  +getTamaño(): float
  +setTamaño(tamaño: float): void
  +getCantidad(): int
  +setCantidad(cantidad: int): void
  +getPrecio(): double
  +setPrecio(precio: double): void
  +getMarca(): String
  +setMarca(marca: String): void
  +toString(): String
}

class Soda {
  -porcAzucar: double
  -promocion: Boolean
  --
  +Soda(identificador: String, descripcion: String, tamaño: float, cantidad: int, precio: double, marca: String, porcAzucar: double, promocion: boolean)
  +toString(): String
}

AguaMineral --|> Producto
AppAlmacen ..> ArregloProducto
AppAlmacen ..> Producto
ArregloProducto *-- Producto
Soda --|> Producto
@enduml